# trukendoos

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  README.md  SPECTRAL_ROT_DESIGN.md
.github/workflows/: build-macos.yml  main.yml
Assets/ui/: README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: SpectralCompressor.cpp  SpectralCompressor.h  SpectralRotEngine.cpp  SpectralRotEngine.h
tools/: TrukendoosWindowsInstaller.cs  build_vs.cmd  build_windows_installer.ps1  check_ui_assets.py  create_missing_ui_assets.py  install-trukendoos-gui.ps1  install-trukendoos-windows.ps1  key_ui_assets.py  make_final_ui_contact_sheet.py  make_ui_contact_sheet.py  package_macos.sh  render_spectral_rot_preview.py  split_header_all.py  ui_layout_editor.html
